# SHREC18

./: .CMakeLists.txt.swp  .main.cpp.swp  CMakeLists.txt  helpers.hpp  main.cpp
igl/: CMakeLists.txt  criticalVIndices.txt
igl/src/: main.cpp
include/: utils.hpp
src/: comparison.h  helpers.hpp  main.cpp  utils.cpp  utils.h  viewer.hpp
